Pedaço do desenvolvimento e conclusão

--- a/desenvolvimento.tex
+++ b/desenvolvimento.tex
@@ -33,6 +33,26 @@ real. Um outro pequeno \textit{script} em Python é capaz de realizar essa taref
 \section{Testes iniciais com o ambiente de desenvolvimento}
 \label{s.testesiniciais}
 
+Apenas com a finalidade de atestar o funcionamento da ferramenta estudada no projeto,
+antes de decidir seguir com seu uso no decorrer da implementação planejada, algumas regras
+de teste simples foram aplicadas sobre alguns arquivos de texto contendo pedaços de
+código e um conjunto de \textit{strings} que deveria ser descoberto numa varredura. Os testes
+foram bem sucedidos nesta etapa pois as regras escritas eram pequenas e rudimentares e também
+ainda não havia necessidade de conversão de bancos de assinaturas ou montagem de
+índices mais complexos e adaptação de \textit{scripts} envolvidos neste processo inicial.
+Numa tentativa mais condizente com um cenário real de detecção de \textit{malware},
+se fez a construção de um índice com um número bem maior de regras obtidas nos repositórios
+já citados previamente. Contudo, nesta segunda etapa ainda não procurou-se converter as
+regras contidas dentro das bases de assinaturas do ClamAV, por motivos de complexidade
+e de completude dos testes propostos. Nessa mesma fase, as regras foram aplicadas dentro
+de um conjunto mais numeroso de arquivos, já contendo alguns arquivos de código-fonte
+e também executáveis de \textit{malware} misturados em algumas pastas, para ver como
+o Yara funcionaria num contexto de varredura mais recursivo. Estas duas primeiras etapas
+de testes foram bem sucedidas e o Yara acusou corretamente quais arquivos continham
+as assinaturas apontadas pelo índice de regras aplicado.
+
+
+
 \section{Testagem completa e análise de resultados}
 \label{s.testefull}
 
@@ -49,6 +69,21 @@ ao servidor da aplicação. Na imagem a seguir temos um esboço do funcionamento
   \caption{Fluxograma de funcionamento da aplicação. Fonte: elaborada pelo autor.}
   \label{f.flux_prototipo}
 \end{figure}
+
+Pensou-se também numa possível estrutura de comunicação entre os módulos utilizando
+os recursos de uma API \textit{RESTful}, que cobriria as funções de transação com
+o banco de dados, execução de scripts na camada do servidor e de \textit{upload}
+e devolução de arquivos entre clientes e servidor, como por exemplo o recente projeto
+Laravel PHP. Pode-se sugerir que A API troque dados com um \textit{front-end} implementado em cima
+do \textit{framework} Angular JS, atualmente disponível em sua segunda versão,
+pelas facilidades que ele contém para o desenvolvimento
+de aplicações que possuem arquitetura semelhante à apresentada na ideia descrita.
+Sugere-se o emprego de tais tecnologias nessa implementação pois são ótimas para se trabalhar com arquivos de texto,
+por já incluirem bibliotecas para tratamento e interpretação de arquivos seguindo
+diversos parâmetros para combinação e verificação de \textit{strings} sob padrões e
+expressões regulares, que automatizariam a formatação e validação dos arquivos,
+assegurando o funcionamento correto da montagem dos índices de assinaturas e dos
+\textit{scripts} de varredura de arquivo executados na camada do servidor.
 % TODO
 % Listar estrutura de pastas do módulo de conversão e varredura
 % Detalhar o funcionamento do desgraçado
