--- a/projeto.tex
+++ b/projeto.tex
@@ -294,15 +294,27 @@ ASSINATURAS PARA REDES DE COMPUTADORES}
 % Agradecimentos
 % ---
 \begin{agradecimentos}
-Agradeço antes de tudo a meus pais, que me deram estrutura, amor, educação, força e qualidade de vida para que eu chegasse até aqui.
-Agradeço por, num país tão desigual como o nosso, ter a chance e as condições de se formar numa universidade pública de qualidade. Tenho total consciência do quão privilegiado eu sou por ter tudo isso e por ter tudo o que tenho na vida.
-Agradeço ao Kelton, meu orientador, por acreditar em mim e me auxiliar com sua paciência e o seu conhecimento no desenvolvimento deste trabalho
-Agradeço também, à música, minha grande paixão, refúgio e meio de expressão, por ter sido crucial na manutenção da minha sanidade e da minha alegria nos momentos mais atormentados que cruzaram o meu caminho. Sem a música, a minha alma e creio que todo este mundo, estariam completamente desolados. Agradeço aos meus alunos por construírem arte e coisas positivas com o conhecimento que compartilhei com eles.
-Agradeço à minha família pelo apoio e pelo carinho comigo durante toda a minha vida.
-Agradeço aos amigos que tenho e que me estimam tanto. Em especial a Marcelo Montanha (meu irmão), Fernando Lima Fernandes, Michel Sunsin, Gabriel Naro, Caetano Ranieri, Luís Morais, Luís Paulo Jarussi, Felipe Leme e Victor Frascarelli por compartilharem os palcos comigo durante esses anos e à República Toca, por ter sido uma segunda casa e uma grande escola.
-Agradeço à Barbara Toscano Barali, pelo amor e pela amizade, por todos os momentos compartilhados e pela ajuda e força inestimáveis que me deu nos meus dias mais tristes.
-Agradeço a todos que sorriem ao se lembrar de mim e a todos que me fazem sorrir.
-\end{agradecimentos}
+Agradeço antes de tudo a meus pais, que me deram estrutura, amor, educação,
+força e qualidade de vida para que eu chegasse até aqui. Agradeço por, num país
+tão desigual como o nosso, ter a chance e as condições de se formar numa
+universidade pública de qualidade. Tenho total consciência do quão privilegiado
+eu sou por ter tudo isso e por ter tudo o que tenho na vida. Agradeço ao Kelton,
+meu orientador, por acreditar em mim e me auxiliar com sua paciência e o seu
+conhecimento no desenvolvimento deste trabalho Agradeço também, à música, minha
+grande paixão, refúgio e meio de expressão, por ter sido crucial na manutenção
+da minha sanidade e da minha alegria nos momentos mais atormentados que cruzaram
+o meu caminho. Sem a música, a minha alma e creio que todo este mundo, estariam
+completamente desolados. Agradeço aos meus alunos por construírem arte e coisas
+positivas com o conhecimento que compartilhei com eles. Agradeço à minha família
+pelo apoio e pelo carinho comigo durante toda a minha vida. Agradeço aos amigos
+que tenho e que me estimam tanto. Em especial a Marcelo Montanha (meu irmão),
+Fernando Lima Fernandes, Michel Sunsin, Gabriel Naro, Caetano Ranieri, Luís
+Morais, Luís Paulo Jarussi, Felipe Leme e Victor Frascarelli por compartilharem
+os palcos comigo durante esses anos e à República Toca, por ter sido uma segunda
+casa e uma grande escola. Agradeço à Barbara Toscano Barali, pelo amor e pela
+amizade, por todos os momentos compartilhados e pela ajuda e força inestimáveis
+que me deu nos meus dias mais tristes. Agradeço a todos que sorriem ao se
+lembrar de mim e a todos que me fazem sorrir. \end{agradecimentos}
 % ---
 
 % ---
@@ -324,7 +336,26 @@ Agradeço a todos que sorriem ao se lembrar de mim e a todos que me fazem sorrir
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
 
-Desde as origens da Internet, existe uma grande preocupação com a privacidade das comunicações e com a prevenção de danos causados por ataques que se aproveitam de vulnerabilidades nas redes corporativas e públicas. Com o aumento constante do uso de dispositivos conectados à internet e da intensidade e variedade de dados transmitidos entre as pessoas, o número de falhas de segurança em redes ainda é preocupante e tende a continuar subindo. Contudo, os pacotes de alguns programas utilizados nesses ataques, conhecidos como \textit{Malware}, possuem aspectos que são rastreáveis e que, quando incorporados aos métodos de busca dos sistemas de segurança, podem ajudar a detectar esses programas maliciosos antes que eles causem dano a outros pontos da rede infectados. A esses aspectos damos o nome de assinaturas de \textit{Malware} e o objeto de estudo deste trabalho são as técnicas de captura de \textit{Malware} que envolvem assinaturas, novas ferramentas do segmento e as tendências e que estão se apresentando no cenário tecnologico para esse tipo de abordagem. O trabalho propõe também a implementação de um ambiente de aplicação e testagem de assinaturas de \textit{Malware} sobre um conjunto de programas contendo traços de código malicioso, com o auxílio de ferramentas modernas que também são utilizadas por grandes empresas de segurança digital e desenvolvimento, além de um protótipo de textit{webservice} para testagem de assinaturas de \textit{malware} e verificação de arquivos \textit{online}.
+Desde as origens da Internet, existe uma grande preocupação com a privacidade
+das comunicações e com a prevenção de danos causados por ataques que se
+aproveitam de vulnerabilidades nas redes corporativas e públicas. Com o aumento
+constante do uso de dispositivos conectados à internet e da intensidade e
+variedade de dados transmitidos entre as pessoas, o número de falhas de
+segurança em redes ainda é preocupante e tende a continuar subindo. Contudo, os
+pacotes de alguns programas utilizados nesses ataques, conhecidos como
+\textit{Malware}, possuem aspectos que são rastreáveis e que, quando
+incorporados aos métodos de busca dos sistemas de segurança, podem ajudar a
+detectar esses programas maliciosos antes que eles causem dano a outros pontos
+da rede infectada. A esses aspectos damos o nome de assinaturas de
+\textit{Malware} e o objeto de estudo deste trabalho são as técnicas de captura
+de \textit{Malware} que envolvem assinaturas, novas ferramentas do segmento e as
+tendências e que estão se apresentando no cenário tecnologico para esse tipo de
+abordagem. O trabalho propõe também a implementação de um ambiente de aplicação
+e testagem de assinaturas de \textit{Malware} sobre um conjunto de programas
+contendo traços de código malicioso, com o auxílio de ferramentas modernas que
+também são utilizadas por grandes empresas de segurança digital e
+desenvolvimento, além de um protótipo de \textit{webservice} para testagem de
+assinaturas de \textit{malware} e verificação de arquivos \textit{online}.
 
 \textbf{Palavras-chave:} Segurança de Redes, \textit{Malware}, Vírus de Computador.
 \end{resumo}
@@ -333,7 +364,23 @@ Desde as origens da Internet, existe uma grande preocupação com a privacidade 
 \begin{resumo}[Abstract]
 \begin{otherlanguage*}{english}
 
-Since the Internet's origins, there's a great preoccupation with the privacy of communications and with preventing damage caused by attacks that exploit vulnerabilities in corporative and private networks. With the increase in usage of internet connected devices and of the intensity and variety of transmitted data between people, the number of security flaws in networks is still worrisome and tends to keep growing. However, packages of some programs used in those attacks, known as malware, have traceable aspects that when incorporated to the search methods of security systems, might help detecting them before causing damage to other infected points ofthe network. To those aspects, we give the name of malware signatures, and the study object of this work are the malware capturing techniques involving signatures, new tools in the segment and the trends showing up in the technologic scenario to this kind of approach. The work also proposes the implementation of an environment to apply and test malware signatures on a set of programs containing traces of malicious code, with the help of modern tools that are also being used by big companies of digital security and development, and also a Web application prototype for online malware signature testing and file verification.
+Since the Internet's origins, there's a great preoccupation with the privacy of
+communications and with preventing damage caused by attacks that exploit
+vulnerabilities in corporative and private networks. With the increase in usage
+of internet connected devices and of the intensity and variety of transmitted
+data between people, the number of security flaws in networks is still worrisome
+and tends to keep growing. However, packages of some programs used in those
+attacks, known as malware, have traceable aspects that when incorporated to the
+search methods of security systems, might help detecting them before causing
+damage to other points of the infected network. To those aspects, we give the
+name of malware signatures, and the study object of this work are the malware
+capturing techniques involving signatures, new tools in the segment and the
+trends showing up in the technologic scenario to this kind of approach. The work
+also proposes the implementation of an environment to apply and test malware
+signatures on a set of programs containing traces of malicious code, with the
+help of modern tools that are also being used by big companies of digital
+security and development, and also a Web application prototype for online
+malware signature testing and file verification.
 
 \textbf{Keywords:} Network security. Malware. Computer Viruses.
 
