--- a/conclusao.tex
+++ b/conclusao.tex
@@ -1,4 +1,49 @@
 \chapter{CONCLUSÃO}
 \label{c.conclusao}
 
-Conclusão do projeto. Última coisa a ser escrita
+A questão do aprimoramento das técnicas de segurança de redes e de informação
+permanecerá relevante por muito tempo, em virtude do fato de que estamos
+inseridos em um mundo que cada vez mais produz e depende de tecnologia e também
+apresenta este mesmo comportamento quanto ao volume e à variedade de dados que
+trafegam pela \textit{internet}. Com os estudos levantados e uma análise do
+cenário atual da computação, pode-se afirmar que as técnicas estudadas e
+aplicadas no desenvolvimento deste projeto estão, em termos de desempenho,
+chegando ao seu máximo, pois a manipulação de assinaturas de \textit{malware}
+implica características no processo de detecção que limitam uma possível
+abordagem com o uso de técnicas de programação mais inovadoras. Embora a
+eficácia das ferramentas atualmente empregadas seja satisfatória e as mesmas
+apresentem uma boa precisão de detecção, estamos sempre atuando num contexto do
+que pode-se chamar de `pós-infecção' ou pelo menos de uma infecção iminente,
+onde os arquivos maliciosos já estão trafegando pelas redes ou até mesmo
+latentes dentro dos ambientes vulneráveis, seja por estarem à espera de um
+comando do usuário ou por terem execução agendada. O panorama dos estudos nesse
+segmento da área de segurança de redes está, em maior parte, tomando um viés
+para a prevenção de infecções e episódios de vulnerabilidade, onde os métodos de
+detecção de intrusão por anomalia e comportamento apresentam a vantagem de
+estarem constantemente procurando se antecipar a possíveis ataques e a novas
+formas de quebra de segurança, com a utilização de conceitos como redes neurais,
+grafos, e até mesmo aprendizado de máquina.
+
+No âmbito mais prático do desenvolvimento do projeto, observou-se que a abertura
+para a criação e melhoria de técnicas envolvendo assinaturas é relativamente
+recente, e as ferramentas encontradas e utilizadas para tais fins não são
+voltadas para o público mais leigo e, talvez, curiosos e entusiastas do assunto,
+haja visto que mesmo uma ferramenta como o Yara, cujo intuito é tornar essa
+manipulação de assinaturas mais simplificada, requer uma configuração que exige
+um razoável conhecimento de utilização de terminais e linhas de comando, e
+afinidade com alguma linguagem de programação de alto ou médio nível para a
+construção dos scripts de varredura ou conversão de bases de assinaturas. Foi
+pensando nesse aspceto que se desenvolveu a ideia da aplicação \textit{online}
+com um sistema capaz de automatizar as tarefas de manuseio de assinaturas de
+\textit{malware}, para que as pessoas possam, além de testar a confiabilidade de
+arquivos encontrados na \textit{internet}, ter um ponto de partida para conhecer
+essa área da computação e também tentar colocar um pouco desse conhecimento em
+prática de uma maneira colaborativa. O código-fonte do protótipo da aplicação
+encontra-se hospedado \href{https://github.com/ltgouvea/TCC }{neste
+repositório},  aberto para quaisquer desenvolvedores que queiram dar andamento
+ao projeto caso se interessem. Já há serviços de varredura de \textit{malware}
+gratuita disponíveis pela \textit{internet}, então o interesse maior no
+desenvolvimento dessa aplicação é o diferencial que existiria na manipulação de
+assinaturas de modo colaborativo, possivelmente anônimo e montando bases de
+dados automaticamente no módulo de conversão de regras descrito no capítulo de
+desenvolvimento do projeto.
