Is this real life? is this just fantasy?

--- a/conclusao.tex
+++ b/conclusao.tex
@@ -14,8 +14,8 @@ abordagem com o uso de técnicas de programação mais inovadoras. Embora a
 eficácia das ferramentas atualmente empregadas seja satisfatória e as mesmas
 apresentem uma boa precisão de detecção, estamos sempre atuando num contexto do
 que pode-se chamar de `pós-infecção' ou pelo menos de uma infecção iminente,
-onde os arquivos maliciosos já estão trafegando pelas redes ou até mesmo
-latentes dentro dos ambientes vulneráveis, seja por estarem à espera de um
+onde os arquivos maliciosos já estão trafegando por pontos de rede ou até mesmo se encontram
+latentes dentro dos ambientes vulneráveis infiltrados, seja por estarem à espera de um
 comando do usuário ou por terem execução agendada. O panorama dos estudos nesse
 segmento da área de segurança de redes está, em maior parte, tomando um viés
 para a prevenção de infecções e episódios de vulnerabilidade, onde os métodos de
@@ -46,4 +46,8 @@ gratuita disponíveis pela \textit{internet}, então o interesse maior no
 desenvolvimento dessa aplicação é o diferencial que existiria na manipulação de
 assinaturas de modo colaborativo, possivelmente anônimo e montando bases de
 dados automaticamente no módulo de conversão de regras descrito no capítulo de
-desenvolvimento do projeto.
+desenvolvimento do projeto. O resultado final foi uma aplicação funcional das
+técnicas propostas no projeto que pode ser utilizada isoladamente, sem o auxílio
+de outros \textit{softwares} antí-virus quaisquer, e posteriormente ampliada ou
+incorporada no segmento de uma aplicação \textit{online} similar à ideia descrita
+durante o desenvolvimento do projeto.
