--- a/metodologia.tex
+++ b/metodologia.tex
@@ -42,7 +42,19 @@ Foi utilizada uma máquina com 4GB de RAM, 1TB de armazenamento e sistema operac
 \subsection{Yara}
 \label{sub:Yara}
 
-Yara é uma ferramenta de código aberto recentemente desenvolvida, cujo intuito é auxiliar desenvolvedores a identificar e classificar amostras de \textit{malware}. Ele é construído em C, porém, com o auxílio de algumas bibliotecas, há a possibilidade de incorporá-lo em scripts de outras linguagens, como Python.Segundo ALVAREZ (2014), O funcionamento do Yara consiste em comparar regras criadas pelo desenvolvedor que descrevem famílias de \textit{malware}, com o código de executáveis quaisquer, ou também de arquivos comprimidos em alguns formatos comuns. As regras podem variar bastante em nível de complexidade e mapearem diversas características do comportamento dos executáveis, que serão detalhadas posteriormente. O projeto no momento encontra-se bastante popular e o programa está sendo utilizado como ferramenta de construção de assinatura de \textit{malware} por desenvolvedores de diversos grupos importantes no ramo, como:
+Yara é uma ferramenta de código aberto recentemente desenvolvida, cujo intuito é
+auxiliar desenvolvedores a identificar e classificar amostras de
+\textit{malware}. Ele é construído em C, porém, com o auxílio de algumas
+bibliotecas, há a possibilidade de incorporá-lo em scripts de outras linguagens,
+como Python.Segundo ALVAREZ (2014), O funcionamento do Yara consiste em comparar
+regras criadas pelo desenvolvedor que descrevem famílias de \textit{malware},
+com o código de executáveis quaisquer, ou também de arquivos comprimidos em
+alguns formatos comuns. As regras podem variar bastante em nível de complexidade
+e mapearem diversas características do comportamento dos executáveis, que serão
+detalhadas posteriormente. O projeto no momento encontra-se bastante popular e o
+programa está sendo utilizado como ferramenta de construção de assinatura de
+\textit{malware} por desenvolvedores de diversos grupos importantes no ramo,
+entre eles:
 \begin{itemize}
 	\item[-] ActiveCanopy
 	\item[-] Adlice
@@ -115,7 +127,10 @@ As regras que utilizaremos no decorrer do projeto serão unificadas num arquivo 
 \subsection{\textit{Logs} de resultados do Yara} % (fold)
 \label{sub:logs_de_resultados_do_yara}
 
-As varreduras efetuadas pelo Yara podem ter seus resultados gravados em arquivos de texto para análise posterior, que podem também definirem-se como \textit{logs}, que por sua vez retornam um dicionário de strings com o seguinte formato:
+As varreduras efetuadas pelo Yara podem ter seus resultados gravados em arquivos
+de texto para análise posterior, que podem também denominarem-se
+\textit{logs}, que por sua vez retornam um  breve dicionário de strings com o seguinte
+formato:
 
 \begin{lstlisting}[caption=Conteúdo dos arquivos de resultado de varredura, label=resultyara]
 {
@@ -141,24 +156,66 @@ O que cada parâmetro significa:
 	\item '\textit{strings}': conjunto de strings para comparação dentro do objeto de varredura
 \end{itemize}
 
+Existe também a possibilidade de utilizar-se outros módulos para verificação e
+isolamento de outros atributos do arquivo como, por exemplo, detecção do uso de
+compressão de executáveis, que é uma técnica comum empregada no desenvolvimento
+de \textit{malware}. Por questões de viabilidade e complexidade do projeto,
+procurou-se aplicar uma abordagem mais simples, sem a realização de testes de
+implementação dos referidos módulos.
+
 \subsection{Python}
 \label{sub:python}
 
-É uma linguagem de programação cujo desenvolvimento ocorre desde 1989. No ano
-de 1994, foi lançada a primeira distribuição da versão 1.0 oficial da
-linguagem e sua versão mais recente foi lançada em setembro de 2015. Para as
-necessidades do presente projeto, utilizaremos a versão 2.7 da linguagem, por
-suportar a implementação dos \textit{scripts} do Yara e também ser a distribuição mais
-estável da linguagem, segundo o \href{www.python.org}{\textit{site} oficial}. O Yara suporta integração com scripts feitos tanto em código C puro como em Python, porém a escolha da linguagem se deu principalmente pela frequência, onde a grande maioria de scripts já prontos e documentados foi feita em Python. As implementações em C são mais comuns em âmbito corporativo, onde se constroem módulos mais otimizados para uso em varreduras de \textit{malware} numa escala mais elevada e o desempenho torna-se um fator mais significativo na aplicação das regras.
+É uma linguagem de programação cujo desenvolvimento ocorre desde 1989. No ano de
+1994, foi lançada a primeira distribuição da versão 1.0 oficial da linguagem e
+sua versão mais recente foi lançada em setembro de 2015. Para as necessidades do
+presente projeto, utilizaremos a versão 2.7 da linguagem, por suportar a
+implementação dos \textit{scripts} do Yara e também ser a distribuição mais
+estável da linguagem, segundo o \href{www.python.org}{\textit{site} oficial}. O
+Yara suporta integração com scripts feitos tanto em código C puro como em
+Python, porém a escolha da linguagem se deu principalmente pela quantidade de
+material disponível, onde a grande maioria de scripts já prontos e documentados
+foi feita em Python,  e pelo fácil acesso à comunidade de desenvolvimento caso
+fosse necessário. As implementações em C são mais comuns em âmbito corporativo,
+onde se constroem módulos mais otimizados para uso em varreduras de
+\textit{malware} numa escala mais elevada e o desempenho e a confidencialidade
+do código tornam-se um fator mais significativo na aplicação das regras.
 
 \subsection{Clam AV}
 \label{sub:clamav}
 
-O Clam AV é um antivírus de código aberto que possui um sistema muito interessante para a montagem de sua base de dados de assinaturas. O \textit{Community Threat Tracking System} funciona coletando os dados de infecções ocorridas nos sistemas dos usuários e aprimorando suas assinaturas automaticamente com base nos dados estatísticos que a comunidade fornece. As bases buscam evidenciar quais \textit{malwares} estão mais ativos no momento, e tornam todas as suas descobertas públicas. Os usuários têm a opção de enviarem dados tanto anonimamente, quanto com um identificador único para cada instalação, e tais dados não são comercializados com terceiros, ou monetizados de alguma outra forma, todas as análises feitas por eles são apenas um serviço gratuito prestado à comunidade \textit{open source}.
-No projeto que foi desenvolvido, utilizaram-se bases de dados com assinaturas utilizadas pelo Clam AV em suas próprias varreduras em \textit{scripts} que as descomprimem e convertem para regras do Yara, que por sua vez podem ser editadas ou testadas isoladamente a critério do desenvolvedor.
+O Clam AV é um antivírus de código aberto que possui um sistema muito
+interessante para a montagem de sua base de dados de assinaturas. O
+\textit{Community Threat Tracking System} funciona coletando os dados de
+infecções ocorridas nos sistemas dos usuários e aprimorando suas assinaturas
+automaticamente com base nos dados estatísticos que a comunidade fornece. As
+bases buscam evidenciar quais \textit{malwares} estão mais ativos no momento, e
+tornam todas as suas descobertas públicas. Os usuários têm a opção de enviarem
+dados tanto anonimamente, quanto com um identificador único para cada
+instalação, e tais dados não são comercializados com terceiros, ou monetizados
+de alguma outra forma, todas as análises feitas por eles são apenas um serviço
+gratuito prestado à comunidade \textit{open source}. No projeto que foi
+desenvolvido, utilizaram-se bases de dados com assinaturas utilizadas pelo Clam
+AV em suas próprias varreduras em \textit{scripts} que as reconhecem, descomprimem e
+convertem para regras do Yara, que por sua vez podem ser editadas ou testadas
+isoladamente a critério do desenvolvedor.
 
 
 \subsection{Resumo da metodologia do projeto}
 \label{ss.resumo}
 
-O fluxo de desenvolvimento do projeto consiste na aplicação de um índice de regras de detecção do Yara, construído a partir da conversão de arquivos contendo bases de assinaturas do Clam AV para arquivos contendo regras de detecção do Yara, sobre o conjunto de amostras vivas de \textit{malware} obtidas nos repositórios citados na seção do desenvolvimento do projeto. As varreduras são feitas via linha de comando e para agilizá-las, além do uso de índices para agrupar regras, também pode-se automatizar as varreduras em grupos maiores de arquivos aplicando um pouco de \textit{shell script}. Os resultados das varreduras serão armazenados em arquivos de texto que irão conter todos os atributos analisados a cada arquivo a respeito de uma determinada regra. Vamos explicar com um pouco mais de detalhe como ficam caracterizadas as infecções nos \textit{logs} de resultados, com casos de teste envolvendo expectativas de resultados positivos, falso-positivos e negativos. Ao final da seção de desenvolvimento, também será explicada a ideia da aplicação \textit{web} para varreduras remotas e manipulação de regras do Yara.
+O fluxo de desenvolvimento do projeto consiste na aplicação de um índice de
+regras de detecção do Yara, construído a partir da conversão de arquivos
+contendo bases de assinaturas do Clam AV para arquivos contendo regras de
+detecção do Yara, sobre o conjunto de amostras vivas de \textit{malware} obtidas
+nos repositórios citados na seção do desenvolvimento do projeto. As varreduras
+são feitas via linha de comando e para agilizá-las, além do uso de índices para
+agrupar regras, também pode-se automatizar as varreduras em grupos maiores de
+arquivos aplicando um pouco de \textit{shell script}. Os resultados das
+varreduras serão armazenados em arquivos de texto que irão conter todos os
+atributos analisados a cada arquivo a respeito de uma determinada regra. Vamos
+explicar com um pouco mais de detalhe como ficam caracterizadas as infecções nos
+\textit{logs} de resultados, com casos de teste envolvendo expectativas de
+resultados positivos, falso-positivos e negativos. Ao final da seção de
+desenvolvimento, também será explicada a ideia da aplicação \textit{web} para
+varreduras remotas e manipulação de regras do Yara.
