--- a/introducao.tex
+++ b/introducao.tex
@@ -43,7 +43,7 @@ conclua um parecer sobre a maliciosidade dos códigos analisados.
 
 Dessa maneira, é possível exemplificar as técnicas de deteção com a figura:
 
-\begin{figure}[h]
+\begin{figure}[H]
 \caption{\small Classificação das técnicas de detecção de \textit{Malware}}
 \centering
 \includegraphics[scale=0.8]{figs/fig1}
@@ -217,4 +217,3 @@ conhecidos.
 %
 %Após citar um item de referência bibliográfica com o comando ``cite'', ela será automaticamente padronizada e %incluída na página de Referências de seu arquivo. Atualmente os maiores sites portadores de artigos, periódicos,
 %dentre outros (IEEE, Springer, etc) já conseguem exportar a publicação desejado no formato BibTeX, sendo facilmente adicionado ao arquivo .bib de seu trabalho.
-
