--- a/metodologia.tex
+++ b/metodologia.tex
@@ -101,8 +101,9 @@ obtido do repositório do projeto \href{yararules.org}{Yara Rules} no
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.95\textwidth]{figs/zeus}
-	\caption{Regra de detecção para o \textit{malware} ``Zeus''. Imagem elaborada pelo autor}
+	\caption{Regra de detecção para o \textit{malware} ``Zeus''.}
 	\label{f.regrazeus}
+	\legend{Fonte: elaborada pelo autor}
 \end{figure}
 
 Na imagem acima temos exemplo de uma descrição para o \textit{malware} chamado ``Zeus''
@@ -120,6 +121,7 @@ Outro exemplo de regra de detecção envolvendo parâmetros semelhantes aos ante
 	\includegraphics[width=0.95\textwidth]{figs/superfish}
 	\caption{Regra de detecção do ``Superfish''}
 	\label{f.superfish}
+	\legend{Fonte: elaborada pelo autor}
 \end{figure}
 
 As regras que utilizaremos no decorrer do projeto serão unificadas num arquivo de índice, compiladas via um\textit{script} em Python para a interpretação do Yara e combinadas com o conjunto completo de arquivos de uma só vez.
