--- a/objetivos.tex
+++ b/objetivos.tex
@@ -15,7 +15,7 @@ em ambientes mobile e de redes de computadores em geral.
 \subsection{Objetivos Específicos}
 \label{s.ojetivosp}
 
-- Para embasar o projeto, será levantado um histórico sobre segurança em redes
+- Para embasar o projeto, foi levantado um histórico sobre segurança em redes
   de computadores e assuntos correlacionados principalmente às técnicas de
   detecção a serem estudadas.
 
